Batch Monitoring/src/objects/BulkAPIJob__c.object
<CustomObject>
    <description>This Object stores information about the Bulk API Jobs which is available in Bulk Data Load Jobs Standard Page</description>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records_Failed__c</fullName>
        <label>Records Failed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records_Processed__c</fullName>
        <label>Records Processed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>BulkAPIJob</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BulkAPIJob Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BulkAPIJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>